2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Fix links to bugs and mailing list.

2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.ac: Bump version to 0.1.7.

2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: Check that newly created task is non-null before
	  trying to use it.  Return if null (should show message to user,
	  though).  Fixes crash found when adding an EDS task in the "All"
	  category.

2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Updated for 0.1.6.

2008-06-23  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Check every minute to see if the day has changed.
	   If it has, and the TaskWindow is open, reinitialize the
	  TaskWindow.  Fixes bug #525306.
	* src/TaskWindow.cs: Add static IsOpen property to determine if a
	  TaskWindow exists and is currently realized.

2008-06-16  Johnny Jacob  <jjohnny@novell.com>
	
	* src/Backends/EDS/EDSBackends.cs: Listen on Source List for
	new groups and sources. Added debug statements.
	
2008-06-12  Ankit Jain  <radical@gmail.com>

	* src/TaskTreeView.cs (PulseAnimation): Disable this when the window is
	gone.  Fixes bug #538144.

2008-06-11  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.ac: Removed seemingly unused $enable_ice_desktop variable. 
	  Make sure to check that Novell.IceDesktop is actually available
	  when running configure.  Fixes bug #537906.
	* NEWS: Getting ready for 0.1.6 release.

2008-06-07  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskTreeView.cs: Prevent crash when double-clicking date widget. 
	  Fixes bug #525282.

2008-06-07  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* data/images/Makefile.am: Update GTK+ icon cache on uninstall.  Fixes
	  bug #536740, patch courtesy of Andrew Starr-Bochicchio.

2008-05-19  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: De-sensitize categoryComboBox during task window